--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,7 @@
 ## Code from https://github.com/marketplace/actions/install-poetry-action
 name: test
 
-on: pull_request
+on: push
 
 jobs:
   test:
