--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,7 +46,9 @@ jobs:
       # install your root project, if required
       #----------------------------------------------
       - name: Install library
-        run: poetry install --no-interaction
+        run: |
+          poetry install --no-interaction
+          pip install pytest
       #----------------------------------------------
       #              run test suite
       #----------------------------------------------
