--- a/tox.ini
+++ b/tox.ini
@@ -1,3 +1,4 @@
 [flake8]
 ignore = E251
 max-line-length = 100
+exclude = ./tests/files  # Code that is note used, therefore not need to be formatted.
