--- a/tox.ini
+++ b/tox.ini
@@ -2,3 +2,7 @@
 ignore = E251
 max-line-length = 100
 exclude = ./tests/files  # Code that is note used, therefore not need to be formatted.
+
+[pytest]
+filterwarnings =
+    ignore:invalid escape sequence :DeprecationWarning
