--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "todocom"
 version = "0.2.2"
 description = "CLI to retrieve a list of all TODO comments in the code"
 authors = ["avivfaraj <avivfaraj4@gmail.com>"]
-license = "GNU-3.0"
+license = "GPLv3"
 readme = "README.md"
 homepage = "https://github.com/avivfaraj/todocom"
 repository = "https://github.com/avivfaraj/todocom"
@@ -13,7 +13,7 @@ keywords = ["todo", "todo-list", "todo-comments", "cli"]
 
 classifiers = [
     "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: GNU General Public License V3(GPLV3)",
+    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
     "Operating System :: OS Independent"
 ]
 
