--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,5 @@
 ## Code from https://github.com/marketplace/actions/install-poetry-action
-name: test
+name: Test & Publish
 
 on:
   push:
@@ -20,6 +20,33 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: '3.10'
+
+      - name: Install test libraries
+        run: |
+          pip install pytest
+          pip install flake8
+      #----------------------------------------------
+      #              run test suite
+      #----------------------------------------------
+      - name: Run tests
+        run: |
+          pytest ./
+          flake8 ./
+
+  # Publish to Pypi
+  build_and_publish:
+    runs-on: ubuntu-latest
+    needs: test
+    if: github.ref == 'refs/heads/main'
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0 # Gets all tags and repo history
+      - name: Set up Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: '3.10'
+
       #----------------------------------------------
       #  -----  install & configure poetry  -----
       #----------------------------------------------
@@ -45,18 +72,20 @@ jobs:
       - name: Install dependencies
         if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
         run: poetry install --no-interaction --no-root
+
       #----------------------------------------------
-      # install your root project, if required
+      # Test in Test Pypi
       #----------------------------------------------
-      - name: Install library
+      - name: Test package in Test PyPi
         run: |
           poetry install --no-interaction
-          pip install pytest
-          pip install flake8
-      #----------------------------------------------
-      #              run test suite
-      #----------------------------------------------
-      - name: Run tests
-        run: |
-          pytest ./
-          flake8 ./
+          # set version number equal to latest git tag
+          poetry version $(git tag | tail -1)
+
+          poetry config repositories.test-pypi https://test.pypi.org/legacy/
+          poetry config pypi-token.test-pypi ${{ secrets.PYPI_TEST_TOKEN }}
+          poetry publish -r testpypi
+
+      - name: Publish package
+        run:
+          poetry publish --build -u __token__ -p ${{ secrets.PYPI_TOKEN }}
