--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -76,16 +76,18 @@ jobs:
       #----------------------------------------------
       # Test in Test Pypi
       #----------------------------------------------
-      - name: Test package in Test PyPi
-        run: |
-          poetry install --no-interaction
-          # set version number equal to latest git tag
-          poetry version $(git tag | tail -1)
+      # - name: Test package in Test PyPi
+      #   run: |
+      #     poetry install --no-interaction
+      #     # set version number equal to latest git tag
+      #     poetry version $(git tag | tail -1)
 
-          poetry config repositories.test-pypi https://test.pypi.org/legacy/
-          poetry config pypi-token.test-pypi ${{ secrets.PYPI_TEST_TOKEN }}
-          poetry publish --build -r testpypi
+      #     poetry config repositories.test-pypi https://test.pypi.org/legacy/
+      #     poetry config pypi-token.test-pypi ${{ secrets.PYPI_TEST_TOKEN }}
+      #     poetry publish --build -r testpypi
 
-      - name: Publish package
-        run:
-          poetry publish --build -u __token__ -p ${{ secrets.PYPI_TOKEN }}
+      - name: Publish to PyPI
+      # if: startsWith(github.ref, 'refs/tags')
+        uses: pypa/gh-action-pypi-publish@master
+        with:
+          password: ${{ secrets.PYPI_TOKEN }}
