--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -86,8 +86,6 @@ jobs:
       #     poetry config pypi-token.test-pypi ${{ secrets.PYPI_TEST_TOKEN }}
       #     poetry publish --build -r testpypi
 
-      - name: Publish to PyPI
-      # if: startsWith(github.ref, 'refs/tags')
-        uses: pypa/gh-action-pypi-publish@master
-        with:
-          password: ${{ secrets.PYPI_TOKEN }}
+      - name: Publish package
+        run:
+          poetry publish --build -u __token__ -p ${{ secrets.PYPI_TOKEN }}
