created dev and release workflows

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,8 +3,8 @@ name: Test & Publish
 
 on:
   push:
-    branches:
-      - 'main'
+    tags:
+      - 'v*'
 
 jobs:
   test:
@@ -76,15 +76,22 @@ jobs:
       #----------------------------------------------
       # Test in Test Pypi
       #----------------------------------------------
-      # - name: Test package in Test PyPi
-      #   run: |
-      #     poetry install --no-interaction
-      #     # set version number equal to latest git tag
-      #     poetry version $(git tag | tail -1)
+      - id: get_version
+        uses: battila7/get-version-action@v2
 
-      #     poetry config repositories.test-pypi https://test.pypi.org/legacy/
-      #     poetry config pypi-token.test-pypi ${{ secrets.PYPI_TEST_TOKEN }}
-      #     poetry publish --build -r testpypi
+      - name: Test package in Test PyPi
+        run: |
+          poetry install --no-interaction
+
+          # set version number equal to latest github version
+          poetry version ${{ steps.get_version.outputs.version-without-v }}
+
+          # Configuration of url and token
+          poetry config repositories.test-pypi https://test.pypi.org/legacy/
+          poetry config pypi-token.test-pypi ${{ secrets.PYPI_TEST_TOKEN }}
+
+          # Publish to test-pypi to ensure no errors
+          poetry publish --build -r test-pypi
 
       - name: Publish package
         run:
