--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -95,4 +95,4 @@ jobs:
       - run: poetry config pypi-token.pypi "${{ secrets.PYPI_TOKEN }}"
       - name: Publish package
         run:
-          poetry publish --build
+          echo yes | poetry publish --build
